--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 17 23:02:28 GMT-05:00 2022
-sdk.dir=C\:\\Users\\helan\\AppData\\Local\\Android\\Sdk
+#Sun Nov 27 01:54:22 EST 2022
+sdk.dir=/Users/kimdoyoon/Library/Android/sdk
