--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Nov 27 01:54:22 EST 2022
-sdk.dir=/Users/kimdoyoon/Library/Android/sdk
+sdk.dir=C\:\\Users\\helan\\AppData\\Local\\Android\\Sdk
